--- a/index.html
+++ b/index.html
@@ -3,98 +3,66 @@
 
   <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Mani Saffarnia's personal site. Mani is a junior developer who has some experience in React-js and node" />
-    <meta name="author" content="Mani Saffarnia" />
-    <title>Mani's Personal Site</title>
+    <title>Mani Saffarnia</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Great+Vibes|Kaushan+Script|Mr+Dafoe|Parisienne" rel="stylesheet">
+    <link rel="icon" href="./images/favicon/favicon.ico">
   </head>
 
   <body>
-    <table cellspacing="10">
-      <tr>
-        <td><img src="images/large_744eb153-2513-4223-ba87-11c391a6d42c.jpg" alt="Mani Saffarnia profile picture"></td>
-        <td>
-          <h1>Mani Saffarnia</h1>
-          <p><em>Junior web developer and a <strong>Juventus fc</strong> fan.</em></p>
-          <p>Hi, I'm Mani Saffarnia. I'm 27 years old and I live in Tehran. I'm a junior web developer with no job experience, but with a lot of passion and ❤.</p>
-        </td>
-      </tr>
-    </table>
 
-    <hr size="2" noshade />
-    <h3>Education</h3>
-    <ul>
-      <li><a href="http://kharazmi.sch.ir/1/?show=p1">Kharazmi</a></li>
-      <li><a href="http://ikiu.ac.ir/fa/">IKIU:Imam Khomeini International University</a></li>
-      <li><a href="http://srbiau.ac.ir/fa">SRBIAU:The Islamic Azad University, Science and Research Branch</a></li>
-    </ul>
-    <hr size="2" noshade>
-    <!--JOB Experience  -->
-    <h3>Work Experience</h3>
-    <table>
-      <thead>
-        <th>Dates</th>
-        <th>Work</th>
-      </thead>
-      <tbody>
-        <tr>
-          <td>2010-2013</td>
-          <td>Lead Developer at Tempo App</td>
-        </tr>
 
-        <tr>
-          <td>2013</td>
-          <td>Developer at Digikala</td>
-        </tr>
-      </tbody>
-    </table>
-    <!--JOB END  -->
-    <hr size="2" noshade>
-    <!--SKILLS  -->
-    <h3>Skills</h3>
-    <table cellspacing="10">
-      <tr>
-        <td>
-          <table cellspacing="10">
-            <tr>
-              <td>HTML</td>
-              <td>⭐⭐⭐⭐⭐</td>
-            </tr>
-            <tr>
-              <td>CSS</td>
-              <td>⭐⭐⭐⭐</td>
-            </tr>
-            <tr>
-              <td>Bootstrap</td>
-              <td>⭐⭐⭐</td>
-            </tr>
-          </table>
-        </td>
+    <!--TOP CONTAINER-->
+    <div class="top-container">
+      <div class="container">
+        <img class="top-cloud" src="./images/cloud.svg" alt="">
+        <h1>I'm Mani.</h1>
+        <h2 class="header-sub-title">a <span class="pro">pro</span>grammer, a web developer and a gamer.</h2>
+        <img class="bottom-cloud" src="./images/cloud.svg" alt="">
+        <img src="./images/land.svg" alt="">
+      </div>
+    </div>
 
-        <td>
-          <table cellspacing="10">
-            <tr>
-              <td>PHP</td>
-              <td>⭐⭐⭐⭐</td>
-            </tr>
-            <tr>
-              <td>React</td>
-              <td>⭐⭐⭐⭐⭐</td>
-            </tr>
-            <tr>
-              <td>Node</td>
-              <td>⭐⭐⭐⭐⭐</td>
-            </tr>
-          </table>
-        </td>
-      </tr>
-    </table>
-    <!--END SKILL SECTION  -->
+    <!--MIDDLE CONTAINER-->
+    <div class="middle-container">
+      <div class="profile">
+        <img class="circle profile-picture" src="./images/profile/profile.jpg" alt="Mani Saffarnia profile picture">
+        <h2>Hi!</h2>
+        <p class="bio">I'm Mani Saffarnia. I'm 27 years old and I live in Tehran.I'm a junior web developer with no job experience yet, but with a lot of passion and ❤️.</p>
+      </div>
+      <hr>
+      <div class="skills">
+        <h2 class="my-skill">My Skills.</h2>
+        <div class="skill-row">
+          <img class="circle skill-picture-top" src="./images/profile/profile.jpg" alt="">
+          <h3>Hi!</h3>
+          <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+        </div>
+        <div class="skill-row">
+          <img class="circle skill-picture-bottom" src="./images/profile/profile.jpg" alt="">
+          <h3>Lorem Ipsum Dolor</h3>
+          <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+        </div>
+      </div>
+      <hr>
+      <div class="contact-me">
+        <h2 class="get-in-touch">Get In Touch</h2>
+        <h3 class="get-in-touch-subtitle">If you want to give me an opportunity to show my skills.</h3>
+        <p>We can code while we eat hot wings! We can talk and share some idea.</p>
+        <a class="btn" href="mailto:mani.saffarnia@gmail.com">CONTACT ME</a>
+      </div>
+    </div>
 
-    <hr size="2" noshade>
+    <!--BOTTOM CONTAINER-->
+    <div class="bottom-container">
+      <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+      <a class="footer-link" href="https://twitter.com/">Twitter</a>
+      <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+      <p>© 2018 Mani Saffarnia.</p>
+    </div>
 
-    <a href="hobbies.html">Hobbies</a>
-    <a href="contact.html">Contact Me</a>
+
   </body>
-
 
 </html>
